Version 1.0RC3 (?? ??? 2005)
 - Removed remember_this_view and get_last_view functions.  Instead, send
   users to their preferred view from their preferences ($STARTVIEW).
   Modified preferences to allow user-created views to be saved as their
   preferred page.
 - Replaced popups.php code with new knoppix based code. This should eliminate
   the problems with popups going off screen. Popups also follow the cursor now,
   but can be disabled in the file.
 - Fixed printer friendly view problem. With refresh on, the refresh URL 
   reverted to the regular page.
 - Fixed bug 1151442: Overlapping events display error in day.php
 - Fixed bug  1146037: Availibility legend size not dynamic and not centered in IE.
 - Added global views (available to all users)
 - Added option to select all users for a view (rather than having
   to select all users in the list).  If users are added later, they
   will be automatically included in the view.
 - Replaced all instances of forms[0] in javascript with the real form names.
   This will allow WebCalendar to co-exist with other forms on the same page.
 - Added javascript that enables visibility of the start/end time or duration
   on the edit_entry page from availability.php.
 - Fixed bug 1148603: Assistants can't view Bosses Unapproved Events
 - Fixed bug 1145342: Category selected when adding event is not transferred
   to edit_entry page.
 - Revisited Bug 986774: Editing Category for and event as Assistant. This fix
   induced another bug. When viewing 'Another User's Calendar', and not
   assistant, and adding event, the category control is populated with the other
   user's categories.
 - Fixed date_selection_html function to include values for
   patch 900968: Add outlook-style availability popup
 - Added patch 900968: Add outlook-style availability popup
 - Fixed VCS export function, PRODID was not defined
 - Fixed bug 1123508: RC3 browser language detection always returns none.