@@ -11,7 +11,10 @@ if ( strlen ( $keywords ) == 0 )
 
 $matches = 0;
 
-$search_others = ( ! empty ( $advanced ) );
+$search_others = true;
+
+if ( empty ( $users ) || empty ( $users[0] ) )
+  $search_others = false;
 if ( $login == "__public__" && $public_access_others != "Y" )
   $search_others = false;
 if ( $readonly == "Y" || $single_user == "Y" )
