@@ -7,6 +7,8 @@ Version 1.0RC3 (?? ??? 2005)
       1118121: get_admins in user-ldap has bad search
       1123508: RC3 browser language detection always returns none.
   - Other bugs fixed:
+    + Fixed broken advanced search that would not allowing searching other
+      users' calendars.  Also added searching non-user calendars.
     + Added javascript that enables visibility of the start/end time or
       duration on the edit_entry page from availability.php
     + Fixed printer friendly view problem. With refresh on, the refresh URL
